<resources>
    <string name="app_name">ToDoWatanabeApplication</string>

<!--メイン画面-->
    <string name="app_title">ToDoApp</string>
    <string name="complete_button_label">完了</string>
    <string name="switching">ビュー切替</string>
    <string name="todolist">すべてのToDoリスト</string>
    <string name="completed_todolist">完了済みTODOリスト</string>
    <string name="inCompleted_todolist">未完了TODOリスト</string>
    <string name="detail_button_label">詳細・編集</string>

<!--新規登録画面-->
    <string name="return_button_label">戻る</string>
    <string name="createTitle">新規ToDo作成</string>
    <string name="cmp_status">完了状態</string>
    <string name="save_button_label">保存</string>
    <string name="priority">重要度:</string>
    <string name="select_date">日付選択</string>
    <string name="deadline_date">期限:</string>

<!--編集画面-->
    <string name="detailEditTitle">ToDo詳細・編集</string>
    <string name="edit_button_label">編集</string>
    <string name="delete_button_label">削除</string>

    <!--重要度スピナー選択肢-->
    <string-array name="priority_array">
        <item>高</item>
        <item>中</item>
        <item>低</item>
    </string-array>

</resources>