<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EditActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/e_returnButton"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:text="@string/return_button_label" />

        <TextView
            android:id="@+id/editTitle"
            android:layout_width="200dp"
            android:layout_height="32dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/detailEditTitle"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/etToDoTitle"
            tools:layout_editor_absoluteX="16dp" />


    </LinearLayout>


    <!-- タスク名 -->


    <!-- 完了状態 -->

    <!-- 期限選択 -->



    <EditText
        android:id="@+id/editToDoTitle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:hint="タスクを入力してください"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editDetailToDo"
        android:layout_width="0dp"
        android:layout_height="137dp"
        android:layout_marginTop="30dp"
        android:hint="タスクの詳細を入力してください"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editToDoTitle" />

    <CheckBox
        android:id="@+id/editCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/cmp_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDetailToDo" />

    <!-- 重要度選択 -->


    <!-- 選択された日付を表示するTextView -->

    <!-- 編集ボタン -->


    <LinearLayout
        android:id="@+id/dateLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/editCompleted"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-20dp">

        <TextView
            android:id="@+id/tvDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/deadline_date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/editSelectedDate"
            android:layout_width="157dp"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:text=""
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSelectDate"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/select_date"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/dateLinearLayout"
        tools:layout_editor_absoluteX="-18dp">

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/priority"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="130dp"
            android:layout_height="27dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:text="@string/edit_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/delete_button_label"
        app:layout_constraintEnd_toStartOf="@+id/btnEdit"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        tools:ignore="MissingConstraints" />
    <!--<TextView
        android:id="@+id/createTitle"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/detailEditTitle"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editToDoTitle"
        tools:layout_editor_absoluteX="16dp" />
-->
</androidx.constraintlayout.widget.ConstraintLayout>