<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <Button
        android:id="@+id/complete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:text="@string/complete_button_label"
        app:layout_constraintEnd_toStartOf="@+id/createToDoButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/createToDoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <Switch
        android:id="@+id/switching_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:text="@string/switching"
        app:layout_constraintEnd_toStartOf="@+id/complete_button"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/App_Name"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_title"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todolist"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/todolist"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switching_View" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="314dp"
        android:layout_marginTop="84dp"
        app:layout_constraintTop_toBottomOf="@+id/todolist"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/todo_item" />

</androidx.constraintlayout.widget.ConstraintLayout>